# BrizoCast

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.kiro/specs/admin-web-panel/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/outdoor-conditions-alert-bot/: .config.kiro  design.md  requirements.md  tasks.md
brizocast/: __init__.py  health.py
brizocast/activities/: __init__.py  base.py  bootstrap.py  registry.py
brizocast/activities/surf/: __init__.py  activity.py  conditions.py  directions.py  presets.py  scorer.py
brizocast/admin/: __init__.py  __main__.py  app.py  auth.py  dependencies.py  flash.py  queries.py  rendering.py  settings.py
brizocast/admin/routers/: __init__.py  commands.py  feedback.py  forecast.py  logs.py  monetization.py  presets.py  spots.py  stats.py  subscriptions.py  users.py
brizocast/admin/static/: styles.css
brizocast/admin/templates/: base.html  commands.html  feedback_list.html  forecast.html  logs.html  monetization.html  presets_list.html  spots_list.html  stats.html  subscriptions_list.html  user_detail.html  users_list.html
brizocast/bot/: __init__.py  app.py
brizocast/bot/conversations/: __init__.py  onboarding.py
brizocast/bot/formatters/: __init__.py  alerts.py  commands.py  digests.py  subscriptions.py
brizocast/bot/handlers/: __init__.py  feedback.py  help.py  location.py  presets.py  settings.py  start.py  status.py  subscriptions.py
brizocast/bot/keyboards/: __init__.py  activities.py  callbacks.py  common.py  feedback.py  locations.py  menu.py  notifications.py  presets.py  settings.py  subscriptions.py
brizocast/config/: __init__.py  overrides.py  settings.py
brizocast/core/: __init__.py  container.py  errors.py  logging.py
brizocast/core/domain/: __init__.py  antispam.py  conditions.py  daylight.py  forecast.py  geo.py  scoring.py  scoring_types.py  spot.py
brizocast/core/ports/: __init__.py  ai_provider.py  forecast_provider.py  geocoding_provider.py  repositories.py  scorer.py  spot_repository.py
brizocast/database/: __init__.py  bootstrap.py  session.py
brizocast/database/migrations/: __init__.py  env.py
brizocast/models/: __init__.py  activity.py  admin_command.py  base.py  config_override.py  custom_condition.py  feedback.py  forecast_cache.py  location.py  notification.py  payment.py  plan.py  preset.py  scheduler_run.py  subscription.py  surf_spot.py  user.py
brizocast/notifications/: __init__.py  engine.py  modes.py  sender.py  window.py
brizocast/providers/: __init__.py
brizocast/providers/ai/: __init__.py  factory.py  gemini.py  null_ai.py
brizocast/repositories/: __init__.py  base.py  condition_repo.py  feedback_repo.py  forecast_cache_repo.py  json_spot_repo.py  location_repo.py  notification_repo.py  payment_repo.py  plan_repo.py  preset_repo.py  subscription_repo.py  user_repo.py
brizocast/scheduler/: __init__.py  digest_jobs.py  forecast_check_job.py  runner.py
brizocast/services/: __init__.py  admin_command_service.py  config_admin_service.py  entitlement_service.py  feedback_service.py  forecast_service.py  health_tracker.py  location_service.py  notification_service.py  payment_service.py  plan_expiry_service.py  preset_admin_service.py  preset_service.py  provider_selector.py  scheduler_state.py  spot_admin_service.py  spot_discovery_service.py  spot_ingestion_service.py  sqlite_scheduler_state.py  status_service.py  subscription_service.py  user_service.py
brizocast/storage/: __init__.py
brizocast/tests/: __init__.py  conftest.py
deploy/: README.md  brizocast-deploy.service  brizocast-deploy.timer
(+63 files in other folders)
