[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brizocast"
version = "0.1.0"
description = "Outdoor Conditions Alert Bot — a Telegram bot for smart, low-noise surf condition alerts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "BrizoCast" }]
keywords = ["telegram", "bot", "surf", "forecast", "notifications"]

# Runtime dependencies. Versions are pinned to lower bounds matching the
# design's technology stack (Python 3.12+, async throughout).
dependencies = [
    "python-telegram-bot>=21,<22",
    "sqlalchemy>=2,<3",
    "greenlet>=3",  # required by SQLAlchemy's async engine
    "aiosqlite>=0.20",
    "apscheduler>=3.10,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27",
    "curl_cffi>=0.7",  # TLS fingerprint impersonation for Cloudflare bypass
    "google-generativeai>=0.7",
    "google-genai>=1.0",  # new SDK used by our Gemini provider
    "alembic>=1.13,<2",
    # Admin web panel stack (FastAPI + Jinja2/HTMX, served by uvicorn).
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "jinja2>=3.1,<4",
    "itsdangerous>=2.1,<3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/brizocast/brizocast"

[tool.setuptools.packages.find]
include = ["brizocast*"]

[tool.setuptools.package-data]
# Ship the bundled JSON spot dataset with the package.
"brizocast.storage.spots" = ["*.json"]

# --------------------------------------------------------------------------- #
# mypy — strict static typing across the whole package.
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["brizocast"]
# Alembic migration scaffolding (env.py + generated version scripts) is not
# written to mypy --strict standards; the runtime bootstrap is the typed path.
exclude = "brizocast/database/migrations/"

# Third-party packages that ship without type stubs. Ignore missing imports so
# `mypy --strict` stays focused on first-party code.
[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "google.generativeai.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest — test discovery, async mode, and Hypothesis-friendly defaults.
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["brizocast/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast, isolated example/edge-case tests",
    "property: Hypothesis property-based tests",
    "integration: tests exercising provider/repo/scheduler wiring",
]

# --------------------------------------------------------------------------- #
# Hypothesis defaults (minimum 100 examples per property test) are registered
# and loaded as a profile in `brizocast/tests/conftest.py`, since Hypothesis
# does not read settings from pyproject.toml.
# --------------------------------------------------------------------------- #
